# DocuMind

./: .env.example  .gitignore  README.md  documind_project.md  pyproject.toml
ai/embeddings/: embedder.py
ai/reasoning/: query_engine.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_document_file_size.py
api/: dependencies.py  main.py  schemas.py
api/routers/: documents.py  queries.py
core/layout/: layout_detector.py
core/ocr/: ocr_engine.py
core/parser/: pdf_parser.py
core/structure/: structure_builder.py
core/tables/: table_extractor.py
db/: database.py  models.py
frontend/: next.config.js  package-lock.json  package.json  playwright.config.ts
frontend/app/: error.tsx  layout.tsx  page.tsx
frontend/app/components/: DocumentCard.tsx  DocumentIntakePanel.tsx  QueryBox.tsx  StructureSummary.tsx  StructuredViewer.tsx  UploadZone.tsx
frontend/app/d/[id]/: page.tsx
frontend/app/documents/[id]/: error.tsx  page.tsx
frontend/e2e/: app.spec.ts
frontend/lib/: api.ts
tests/: conftest.py  test_api.py  test_layout.py  test_parser.py  test_structure_builder.py
workers/: celery_app.py  tasks.py
